# morphine

./: .clang-format  .gitignore  LICENSE  README.md  build.kts  changelog.md  meson.build  meson.options
components/: meson.build
components/app/: meson.build
components/app-cli/: meson.build
components/app-cli/scripts/: launcher.ms
components/app-cli/src/: main.c
components/app-compiler/: meson.build  meson.options
components/app-morphine/: meson.build  meson.options
components/app-morphine/include/: allocator.h  compiler.h  dlibcompiler.h  execute.h  loaders.h  parseargs.h
components/app-morphine/include/userdata/: readfile.h
components/app-morphine/src/: allocator.c  compiler.c  dlibcompiler.c  execute.c  human.c  loaders.c  main.c  millis.c  parseargs.c
components/app-vm/: meson.build  meson.options
components/app-vm/include/: allocator.h  dlibcompiler.h  millis.h
components/app-vm/src/: allocator.c  dlibcompiler.c  loaders.c
components/app-wasm/: meson.build
components/app-wasm/src/: main.c
components/app/include/: allocator.h  env.h  execute.h  library.h  loaders.h  parseargs.h
components/app/scripts/: launcher.mos  launcher.ms
components/app/src/: allocator.c  env.c  execute.c  library.c  loaders.c  main.c  parseargs.c
components/app/src/sio/: file.c
components/compiler/: .gitignore  build.gradle.kts  gradle.properties  meson.build  meson.options  settings.gradle.kts
components/compiler/annotation/: build.gradle.kts
components/compiler/buildSrc/: build.gradle.kts
components/compiler/bytecode/: build.gradle.kts
components/compiler/bytecode-annotation/: build.gradle.kts
components/compiler/cli/: build.gradle.kts
components/compiler/clibrary/: build.gradle.kts
components/compiler/compiler/: build.gradle.kts
components/compiler/include/: morphinec.h
components/compiler/optimizer/: build.gradle.kts
components/compiler/processor/: build.gradle.kts
components/compiler/src/: ast.c  binary.c  codegen.c  compiler.c  decompiler.c  disassembler.c  lex.c  lib.c  library.c  optimizer.c  parser.c  printer.c  rollout.c  serializer.c  stack.c  strtable.c  visitor.c
components/dlib-compiler/: meson.build  meson.options
components/libs/: meson.build
components/libs/bigint/: meson.build
components/libs/fs/: meson.build
components/libs/include/: meson.build  morphinel.h  morphinel.h.in
components/libs/math/: meson.build
components/libs/src/: fs.c  import.c  import.c.in  meson.build
components/libs/system/: meson.build
components/libs/targets/: meson.build
components/misc/: meson.build
components/misc/app/: meson.build
components/misc/jni/: meson.build
components/morphine/: meson.build  meson.options
components/morphine/api/: allocator.c  call.c  callstack.c  coroutine.c  function.c  gc.c  instance.c  iterator.c  loader.c  metatable.c  native.c  operation.c  reference.c  registry.c  sio.c  stack.c  state.c  string.c  table.c  throw.c  userdata.c  value.c  vector.c  version.c
components/morphine/auxiliary/: args.c  checkargs.c  constructor.c  expect.c  sio.c  table.c
components/morphine/binary/: loader.c
components/morphine/compiler/: ast.c  codegen.c  config.h  lex.c  parser.c  printer.c  stack.c  stack.h  strtable.c  visitor.c
components/morphine/core/: allocator.c  hook.c  init.c  instance.c  instruction.c  interpreter.c  jumptable.h  loader.c  metatable.c  object.c  registry.c  require.c  throw.c  value.c
components/morphine/gc/: allocator.c  cache.c  control.c  dump.c  finalizer.c  hot.c  object.c  safe.c  stages.h  status.c  structure.c
components/morphine/include/: morphine.h
components/morphine/init/: instance.c  stages.h
components/morphine/instruction/: info.c
components/morphine/libs/: base.c  compiler.c  coroutine.c  gc.c  math.c  registry.c  sio.c  string.c  table.c  value.c  vector.c
components/morphine/misc/: loader.c  metatable.c  registry.c  uuid.c
components/morphine/object/: closure.c  coroutine.c  function.c  iterator.c  native.c  object.c  proto.c  reference.c  sio.c  state.c  string.c  table.c  userdata.c  vector.c
components/morphine/platform/: platform.c
components/morphine/stack/: access.c  call.c  control.c  functions.h  structure.c
components/native-compiler/: meson.build
components/native-compiler/include/: ast.h  lex.h  strtable.h
components/native-compiler/src/: ast.c  lex.c  main.c  parser.c  printer.c  strtable.c
components/new-compiler/: meson.build
components/new-compiler/src/: ast.c  lex.c  lib.c  printer.c
components/nostdlibs/: meson.build  meson.options
components/nostdlibs/include/: morphinenostdlibs.h
components/nostdlibs/src/: math.c
docs/wasm/: meson.build
docs/wasm/cross/: wasm.ini
docs/wasm/src/: main.c
virtual-machine/: .gitignore  CMakeLists.txt
virtual-machine/application/: CMakeLists.txt  allocator.c  execute.c  execute.h  human.c  human.h  loaders.c  main.c  millis.c  parseargs.c  parseargs.h  userdata.c
virtual-machine/application/include/: execute.h  parseargs.h
virtual-machine/application/userdata/: readfile.c  tbcfile.c
virtual-machine/morphine/: CMakeLists.txt
virtual-machine/morphine/api/: allocator.c  call.c  gc.c  instance.c  loader.c  metatable.c  native.c  operation.c  reference.c  registry.c  require.c  stack.c  state.c  string.c  table.c  throw.c  userdata.c  value.c
virtual-machine/morphine/auxiliary/: checkargs.c  constructor.c  expect.c  table.c  value.c
virtual-machine/morphine/core/: alloc.c  allocator.c  call.c  crc32.c  gc.c  hashmap.c  init.c  instance.c  instruction.c  interpreter.c  loader.c  metatable.c  object.c  registry.c  require.c  stack.c  throw.c  value.c
virtual-machine/morphine/gc/: control.c  finalizer.c  hot.c  status.c  structure.c
virtual-machine/morphine/include/: morphine.h
virtual-machine/morphine/libs/: base.c  coroutine.c  fiber.c  math.c  string.c  table.c  value.c
virtual-machine/morphine/object/: closure.c  native.c  proto.c  reference.c  state.c  string.c  table.c  userdata.c
virtual-machine/morphine/stack/: access.c  call.c  control.c  structure.c
(+1007 files in other folders)
