option('build_app', type : 'feature', value : 'enabled')
option('build_compiler', type : 'feature', value : 'enabled')
option('build_libs', type : 'feature', value : 'enabled')

option('uselib_math', type : 'feature', value : 'enabled')
option('uselib_fs', type : 'feature', value : 'enabled')
option('uselib_system', type : 'feature', value : 'enabled')
option('uselib_bigint', type : 'feature', value : 'enabled')

option('morphine_module_jumptable', type : 'feature', value : 'enabled')
option('morphine_module_sso', type : 'feature', value : 'enabled')
option('morphine_module_debug', type : 'feature', value : 'disabled')
