option('build_app', type : 'feature', value : 'enabled')
option('build_compiler', type : 'feature', value : 'enabled')
option('build_libs', type : 'feature', value : 'enabled')

option('libs', type : 'array', value : ['system', 'fs', 'math', 'bigint'])

option('morphine_module_jumptable', type : 'feature', value : 'enabled')
option('morphine_module_sso', type : 'feature', value : 'enabled')
option('morphine_module_distributed_gc', type : 'feature', value : 'enabled')
option('morphine_module_debug', type : 'feature', value : 'disabled')
